--- a/src/main/resources/com/tank2d/client/ui/waiting_room.fxml
+++ b/src/main/resources/com/tank2d/client/ui/waiting_room.fxml
@@ -16,7 +16,7 @@
             fx:controller="com.tank2d.client.ui.WaitingRoomController">
 
     <!-- Main Waiting Room Container -->
-    <VBox alignment="TOP_CENTER" layoutX="150.0" layoutY="60.0" prefHeight="480.0" prefWidth="500.0"
+    <VBox fx:id="waitingRoomContainer" alignment="TOP_CENTER" layoutX="150.0" layoutY="60.0" prefHeight="480.0" prefWidth="500.0"
           spacing="12.0" style="-fx-background-color: #f4e8c1; -fx-border-color: #704214; -fx-border-width: 4; -fx-background-radius: 5; -fx-border-radius: 5;">
 
         <padding>
